--- a/Sunshine2/app/src/main/res/layout/activity_detail.xml
+++ b/Sunshine2/app/src/main/res/layout/activity_detail.xml
@@ -1,9 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/weather_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.sunshine.app.DetailActivity"
+    tools:context="com.mathai.alex.sunshine2.app.DetailActivity"
     tools:ignore="MergeRootFrame" />
-
-
